Texture won't refresh automatically in UV editor. Minor annoyance. #48151

Closed
opened 2016-04-15 11:01:27 +02:00 by Gwenael Le Page · 6 comments

System Information
Windows 10 64 nVidia GTX570

Blender Version
Broken: 2.77a, official abf6f08

Short description of error
Switching form one brush texture to another doesn't lead to a refresh of the displayed overlayed texture in the UV editor

Exact steps for others to reproduce the error
1.New file

2.Open UV editor, create new image, choose the paint mode.
Toolshelf, Options, tick "show texture overlay".

3.Properties panel, texture tab, choose "other data texture" to be displayed
Create new texture, say marble
Create another new texture, an image this time (but can be anothe texture, say clouds…), link to an image of your choice

4.Now, while still in the properties panel, switch back and forth between your 2 textures and hover over the image: the texture won't get refreshed if you don't zoom in/out. That means you can paint a marble texture while Blender overlays the image you've chosen in your other texture slot.

As a side effect, the thumbnail in the UV editor's toolshelf, under the texture tab won't be refreshed as well. You have to hover over it for it to be refreshed

This is a very small annoyance, but still worth mentionning, as visual feedback from the UI to the user is misleading.

Demo file
Texture refresh bug.blend

**System Information** Windows 10 64 nVidia GTX570 **Blender Version** Broken: 2.77a, official abf6f08 **Short description of error** Switching form one brush texture to another doesn't lead to a refresh of the displayed overlayed texture in the UV editor **Exact steps for others to reproduce the error** 1.New file 2.Open UV editor, create new image, choose the paint mode. Toolshelf, Options, tick "show texture overlay". 3.Properties panel, texture tab, choose "other data texture" to be displayed Create new texture, say marble Create another new texture, an image this time (but can be anothe texture, say clouds…), link to an image of your choice 4.Now, while still in the properties panel, switch back and forth between your 2 textures and hover over the image: the texture won't get refreshed if you don't zoom in/out. That means you can paint a marble texture while Blender overlays the image you've chosen in your other texture slot. As a side effect, the thumbnail in the UV editor's toolshelf, under the texture tab won't be refreshed as well. You have to hover over it for it to be refreshed This is a very small annoyance, but still worth mentionning, as visual feedback from the UI to the user is misleading. Demo file [Texture refresh bug.blend](https://archive.blender.org/developer/F303869/Texture_refresh_bug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @gwentiv

Added subscriber: @gwentiv

Added subscriber: @mont29

Added subscriber: @mont29

Yuck… Can confirm the bug, this is an RNA update issue.

Yuck… Can confirm the bug, this is an RNA update issue.
Bastien Montagne self-assigned this 2016-04-15 13:13:56 +02:00

This issue was referenced by 10320891f0

This issue was referenced by 10320891f0468716e3f4029c3136f3b86587cef2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48151
No description provided.